--- a/site_uwsgi.ini
+++ b/site_uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 master = true
-home = /home/Hoto/flask/venv
+home = /home/Hoto/venv
 wsgi-file = /home/Hoto/flask/main.py
 callable = app
 socket = :23456
