js del rempve pager

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -8,3 +8,5 @@ processes = 4
 threads = 2
 buffer-size = 32768
 daemonize = /home/Hoto/flask/log/cocoa.log
+
+pidfile=%(chdir)/home/Hoto/flask/uwsgi.pid 
