--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -9,4 +9,4 @@ threads = 2
 buffer-size = 32768
 daemonize = /home/Hoto/flask/log/cocoa.log
 
-pidfile=%(chdir)/home/Hoto/flask/uwsgi.pid 
+pidfile= /home/Hoto/flask/uwsgi.pid 
